# vim: set noexpandtab:

2013-06-05 Steve
	* Updated pileup file for new GRL
	* Added isBadMuon and isCosmicMuon flags to muons
	* Added isBadVeryLoose and isHotTile flags to jets
	* Tagging SusyCommon-00-00-73

2013-05-30 Steve
	* Update GRL
	* Tagging SusyCommon-00-00-72

2013-05-19 Steve
	* Updated to SUSYTools-00-03-00 and trunk of MultiLep
		* New args for get_*_signal lepton functions
		* New args for Set*TLV SUSYTools methods
		* New approach for setting nominal TLV when adding missing jets in systematics
		* New photon selection function usage
	* Tagging SusyCommon-00-00-71

2013-05-19 Steve
	* Added container taus to SusyD3PDAna
		* Functionality copied over from SusyCommon-00-00-68-branch
	* Added m_saveContTaus flag to SusyNtMaker for toggling usage of
	  container taus to fill the SusyNt rather than preTaus
	* Added new filtering options to SusyNtMaker
		* m_nLepFilter specifies minimum light leptons to save event
		* m_nLepTauFilter specifies minimum leptons to save event
		* m_filterTrigger toggles trigger filtering, using all triggers
		  saved in the event trigger flags

2013-05-02 Steve
	* Lowered the pre-lepton pt cuts to 6 GeV
		* metMuons still used for the met with pt>10
		* This impacts the code's usefulness for d3pd analysis,
		  so I will try to add functionality to keep using 10 GeV
		  for baseline and signal object level
	* Tagging SusyCommon-00-00-70

2013-05-02 Steve
	* Tagging SusyCommon-00-00-69

2013-05-01 Steve
	* Added flag to SusyD3PDAna for toggling the MET jet-ele overlap fix
	* Extended baseline muon eta cut up to 2.5
	* Removed useMetMuons flag which is redundant after extending muon eta cut
	* Cleaned up some unused commented-out code
	* Moved Sherpa WW radiative b-quark fix methods to SusyD3PDAna
	* Removed cell out and soft jet term checks in SusyMetValdation
	* Replaced filling of met.softJet and met.refCell with met.softTerm in SusyNtMaker

2013-04-17 Steve
	* Changed default MET to Default in NtMaker